# gvas

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  Makefile.toml  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
resources/test/: Options.sav  Profile_0.sav  SaveSlot_03.sav  Slot1.sav  Slot2.sav  Slot3.sav  assert_failed.sav  component8.sav  enum_array.sav  package_version_524.sav  package_version_525.sav  palworld_zlib_twice.sav  ro_64bit_fav.sav  string_table_entry.sav  transform.sav
src/: cursor_ext.rs  custom_version.rs  engine_version.rs  error.rs  game_version.rs  lib.rs  object_version.rs  ord_ext.rs  savegame_version.rs  scoped_stack_entry.rs  types.rs
src/properties/: array_property.rs  delegate_property.rs  enum_property.rs  field_path_property.rs  int_property.rs  map_property.rs  mod.rs  name_property.rs  object_property.rs  set_property.rs  str_property.rs  struct_property.rs  struct_types.rs  text_property.rs  unknown_property.rs
tests/: assert_failed.rs  component8.rs  delegate.rs  enum_array.rs  features_01.rs  gvas.rs  name_arrayindex.rs  options.rs  package_version_524.rs  palworld.rs  read.rs  regression_01.rs  saveslot_03.rs  serde.rs  serde_json.rs  slot2.rs  slot3.rs  test.rs  test_cursor.rs  test_file.rs  test_guid.rs  test_property.rs  text_property_noarray.rs  transform.rs
tests/common/: delegate.rs  features.rs  mod.rs  options.rs  palworld.rs  profile0.rs  regression.rs  saveslot3.rs  slot1.rs  tagcontainer.rs  vector2d.rs
tests/gvas_tests/: errors.rs  mod.rs  name_arrayindex.rs  package_version_524.rs  package_version_525.rs  palworld.rs  test_cursor.rs  test_file.rs  test_guid.rs  test_property.rs
tests/serde_tests/: mod.rs  serde_json_round_trip.rs  serde_json_template.rs
