[package]
name = "gvas"
description = "Crate for parsing UE4 gvas save files."
authors = ["localcc <work@localcc.cc>"]
keywords = ["ue4", "unrealengine", "ue5", "gvas", "uasset"]
homepage = "https://github.com/localcc/gvas"
repository = "https://github.com/localcc/gvas"
readme = "README.md"
license = "MIT"
version = "0.8.0"
edition = "2021"

[dependencies]
enum_dispatch = "0.3.8"
byteorder = "1.4.3"
ordered-float = "4.2.0"
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_with = { version = "3.5", optional = true }
indexmap = "1.9.3"
unreal_helpers = { version = "0.1.13", features = ["read_write"] }
thiserror = "1.0.40"
num_enum = "0.7.1"
flate2 = "1.0.28"

[features]
serde = ["dep:serde", "dep:serde_with", "ordered-float/serde", "indexmap/serde"]

[dev-dependencies]
serde_json = { version = "1.0.96", features = ["float_roundtrip"] }

[[test]]
name = "serde"
required-features = ["serde"]

[[test]]
name = "serde_json"
required-features = ["serde"]
