[package]
name = "gvas"
description = "Crate for parsing UE4 gvas save files."
authors = ["localcc <work@localcc.cc>", "Scott Anderson"]
keywords = ["ue4", "unrealengine", "ue5", "gvas", "uasset"]
homepage = "https://github.com/localcc/gvas"
repository = "https://github.com/localcc/gvas"
readme = "README.md"
license = "MIT"
version = "0.10.0"
edition = "2021"

[dependencies]
enum_dispatch = "0.3.13"
byteorder = "1.5.0"
ordered-float = "4.4.0"
serde = { version = "1.0.210", optional = true, features = ["derive"] }
serde_with = { version = "3.11.0", optional = true, features = ["hex"] }
indexmap = "2.6.0"
thiserror = "2.0.17"
num_enum = "0.7.3"
flate2 = "1.0.34"
cfg_eval = "0.1.2"

[features]
serde = ["dep:serde", "dep:serde_with", "ordered-float/serde", "indexmap/serde"]

[dev-dependencies]
serde_json = { version = "1.0.132", features = ["float_roundtrip", "preserve_order"] }

[[test]]
name = "serde"
required-features = ["serde"]
